Fixed bug in card to present products where image would missalign when description was too small. Now the image is alligned always. Also added ellipsis for description so if it is too long it will get a ... notation at the end. Changed some css for the site. The hard-coded cards can be removed now since it is working

--- a/src/main/resources/static/css/productsite.css
+++ b/src/main/resources/static/css/productsite.css
@@ -10,12 +10,10 @@
 }
 
 .card{
-    width:65%;
+    width: 65%;
     overflow: hidden;
     display: flex;
-    align-items: center;
-    flex-direction: column;
-    background-color:#f9f9f9;
+    background-color: #f9f9f9;
     box-shadow: 0 5px 10px rgb(0,0,0,0.3);
 }
 
@@ -27,9 +25,25 @@ img{
     width: 100%;
     height: 230px;
     object-fit: fill;
+    float: left;
+    margin-right: 10px;
 }
+
 img:hover {
     filter: contrast(200%);
+}
+
+.card-body {
+    width: 100%;
+    padding: 15px;
+}
+
+.card-text {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 a[href].btn-primary {
